...
              style={[
                styles.enableLocationBtn,
                { backgroundColor: colors.primary },
              ]}
              onPress={() => void onEnableLocation()}
            >
              <Text style={styles.enableLocationBtnText}>Enable Location</Text>
            </Pressable>
          ) : (
            <Pressable
              style={[
                styles.enableLocationBtn,
                { backgroundColor: colors.primary },
...
          onClose={handleLocationPromptClose}
        />
      )}

      <View style={styles.searchWrapper}>
        <SearchBar
          placeholder="Search"
          onPress={() => {
            if (!isSearching) {
              setNavigationState(NAVIGATION_STATE.SEARCHING);
            }
          }}
          isConfiguring={isConfiguring}
...
