...
            value === "SGW" && [
              styles.textActive,
              { color: colors.primary, opacity: 1 },
            ],
          ]}
        >
          SGW Campus
        </Text>
      </Pressable>

      <Pressable style={styles.item} onPress={() => onChange("LOYOLA")}>
        <Text
          style={[
...
            value === "LOYOLA" && [
              styles.textActive,
              { color: colors.primary, opacity: 1 },
            ],
          ]}
        >
          Loyola Campus
        </Text>
      </Pressable>
    </View>
  );
}

...
