...
      hasParking: false,
      isAccessible: true,
    },
  },
  {
    id: "CL",
    name: "CL Annex",
    aliases: ["CL", "CL Annex", "Annex"],
    marker: { latitude: 45.49429413805923, longitude: -73.57920092745108 },
    addressLines: ["1665 Ste-Catherine St. W."],
    polygon: [
      { latitude: 45.494334143482156, longitude: -73.57945028252378 },
      { latitude: 45.49412857685624, longitude: -73.57909820018449 },
...
