...
              style={[
                styles.indoorMapsBtn,
                { backgroundColor: colors.primary },
              ]}
            >
              <Ionicons name="map" size={18} color="white" />
              <Text style={[styles.indoorMapsText, font(14)]}>Indoor Maps</Text>
            </Pressable>
          )}
        </View>
      )}
    />
  );
...
