export const PLACE_TYPES = [
  { label: "Restaurants", value: "restaurant" },
  { label: "Parking", value: "parking" },
  { label: "Libraries", value: "library" },
  { label: "Parks", value: "park" },
  { label: "Food Stores", value: "food_store" },
  { label: "Banks", value: "bank" },
  { label: "Gyms", value: "gym" },
  { label: "Subway", value: "subway_station" },
] as const;
