appId: com.soen390.conunav
---
- launchApp
- tapOn: "Enable Location"
- tapOn: "Search"
- tapOn: "Search"
- inputText: "Mcdona"
- pressKey: Enter
- assertVisible: "Mcdonald's"