appId: com.soen390.conunav
---
- launchApp
- tapOn: "Enable Location"
- assertVisible: "SGW Campus"
- assertVisible: "Loyola Campus"
- tapOn: "SGW Campus"
- tapOn: "Loyola Campus"
- tapOn:
    point: "90%,81%"